# ferros

./: .gitignore  .gitmodules  CNAME  Cargo.toml  LICENSE  README.md  Xargo.toml  build.rs  buildspec.yml  check-all.sh  fel4.toml  index.html  rust-toolchain  sel4.toml  simulate.sh  simulate_uart.sh
cross_queue/: Cargo.toml
cross_queue/src/: lib.rs
cross_queue/tests/: array_queue.rs
example/: .gdb_history  .gitignore  Cargo.toml  build-tests.sh  build.rs  cargo-build.sh  sel4.toml  test.out
example/.cargo/: config
example/build-script/: Cargo.toml
example/build-script/src/: main.rs
example/ext/fancy-test-runner/: .gitignore  Cargo.toml  build.rs
example/ext/fancy-test-runner/src/: error.rs  main.rs
example/hello-printer/: Cargo.toml
example/hello-printer/.cargo/: config
example/hello-printer/src/: lib.rs  main.rs
example/hello-printer/tests/: foo.rs
example/root-task/: Cargo.toml  build.out  build.rs
example/root-task/build-script/: Cargo.toml
example/root-task/build-script/src/: main.rs
example/root-task/src/: error.rs  main.rs
example/src/: main.rs
examples/simple/: .gitignore  Cargo.toml  cargo-build.sh  crate-binary-deps  sel4.toml
examples/simple/hello-printer/: Cargo.toml
examples/simple/hello-printer/src/: lib.rs  main.rs
examples/simple/root-task/: Cargo.toml
examples/simple/root-task/src/: main.rs
examples/system/: Cargo.toml  README.md  sel4.toml
examples/system/.cargo/: config.toml
examples/system/applications/console/: Cargo.toml
examples/system/applications/console/src/: lib.rs  main.rs
examples/system/drivers/enet/: Cargo.toml
examples/system/drivers/enet/src/: lib.rs  main.rs
examples/system/drivers/iomux/: Cargo.toml
examples/system/drivers/iomux/src/: lib.rs  main.rs
examples/system/drivers/persistent-storage/: Cargo.toml
examples/system/drivers/persistent-storage/src/: flash_controller.rs  lib.rs  main.rs
examples/system/drivers/tcpip/: Cargo.toml
examples/system/drivers/tcpip/src/: ipc_phy_dev.rs  lib.rs  main.rs
examples/system/imx6-devices/: Cargo.toml
examples/system/imx6-devices/src/: ecspi1.rs  enet.rs  gpio.rs  gpt.rs  iomuxc.rs  lib.rs  ocotp.rs  uart1.rs  wdog.rs
examples/system/imx6-hal/: Cargo.toml
examples/system/imx6-hal/src/: asm.rs  barrier.rs  gpio.rs  lib.rs  otp.rs  serial.rs  spi.rs  spi_nor_flash.rs  timer.rs
examples/system/imx6-hal/src/enet/: mod.rs  uncached_memory_region.rs
examples/system/imx6-hal/src/enet/dma/: descriptor.rs  mod.rs  ring.rs  ring_entry.rs
examples/system/libraries/debug-logger/: Cargo.toml  build.rs
examples/system/libraries/debug-logger/src/: lib.rs
examples/system/libraries/net-types/: Cargo.toml
examples/system/libraries/net-types/src/: frame.rs  lib.rs  udp_transmit_buffer.rs
examples/system/root-task/: Cargo.toml  build.rs
examples/system/root-task/src/: error.rs  main.rs
examples/system/scripts/: build-docs.sh  build.sh  fetch-toolchain.sh  mkflash.sh  setup-networking.sh  simulate-no-eth.sh  simulate.sh  workspace-build-wrapper.sh
ferros-build/: Cargo.toml
ferros-build/src/: lib.rs
ferros-test/: Cargo.toml  README.md
ferros-test/examples/minimal/: Cargo.toml  sel4.toml
ferros-test/examples/minimal/src/: main.rs
ferros-test/examples/mock/: Cargo.toml
ferros-test/examples/mock/mock-ferros/: Cargo.toml
ferros-test/examples/mock/mock-ferros/src/: lib.rs
ferros-test/examples/mock/src/: lib.rs
ferros-test/src/: codegen.rs  lib.rs  model.rs  parse.rs  resource.rs
ferros-test/test-macro-impl/: .gitignore  Cargo.toml
ferros-test/test-macro-impl/src/: codegen.rs  model.rs  parse.rs
qemu-test/: Cargo.toml  README.md
qemu-test/fel4-test-project/: Cargo.toml  Xargo.toml  build.rs  fel4.toml  sel4.toml
qemu-test/fel4-test-project/src/: dont_tread_on_me.rs  double_door_backpressure.rs  dual_process.rs  fault_pair.rs  fel4_test.rs  lib.rs  main.rs  single_process.rs  uart.rs
qemu-test/fel4-test-project/target_specs/: README.md  aarch64-sel4-fel4.json  armv7-sel4-fel4.json
qemu-test/src/: main.rs
qemu-test/test-project/: Cargo.toml  build.rs  cargo-build.sh  fel4.toml  sel4.toml
qemu-test/test-project/.cargo/: config
qemu-test/test-project/elf-process/: Cargo.toml
qemu-test/test-project/elf-process/src/: lib.rs  main.rs
qemu-test/test-project/root-task/: Cargo.toml  build.rs
qemu-test/test-project/root-task/build-script/: Cargo.toml
qemu-test/test-project/root-task/build-script/src/: main.rs
qemu-test/test-project/root-task/src/: call_and_response_loop.rs  child_process_cap_management.rs  child_process_runs.rs  child_thread_runs.rs  dont_tread_on_me.rs  double_door_backpressure.rs  elf_process_runs.rs  fault_or_message_handler.rs  fault_pair.rs  grandkid_process_runs.rs  main.rs  memory_read_protection.rs  memory_write_protection.rs  over_register_size_params.rs  polling_consumer.rs  self_hosted_mem_mgmt.rs  shared_page_queue.rs  uart.rs  weak_elf.rs  wutbuddy.rs
qemu-test/test-project/src/: caching.rs  call_and_response_loop.rs  child_process_cap_management.rs  child_process_runs.rs  dont_tread_on_me.rs  double_door_backpressure.rs  dual_process.rs  fault_or_message_handler.rs  fault_or_message_handler_aarch64.rs  fault_or_message_handler_arm.rs  fault_pair.rs  grandkid_process_runs.rs  irq_control_manipulation.rs  main.rs  memory_read_protection.rs  memory_write_protection.rs  over_register_size_params.rs  reuse_slots.rs  reuse_untyped.rs  root_task_runs.rs  self_hosted_mem_mgmt.rs  shared_page_queue.rs  single_process.rs  stack_setup.rs  uart.rs  wutbuddy.rs
qemu-test/test-project/target_specs/: x86_64-sel4-fel4.json
secure-element/: Cargo.toml
secure-element/src/: interchange.rs  lib.rs  repr.rs
selfe-wrap/: Cargo.toml
smart_alloc/: Cargo.toml  README.md
smart_alloc/src/: lib.rs
smart_alloc/tests/: integration.rs
src/: bootstrap.rs  cap.rs  config.rs  debug.rs  error.rs  fancy.rs  fel4_test.rs  lib.rs  micro_alloc.rs  pow.rs  test_proc.rs  twinkle_types.rs  vspace.rs  vspace_too.rs
target_specs/: README.md  armv7-sel4-fel4-eabi.json
tests/: integration.rs
(+104 files in other folders)
