[package]
name = "ferros"
version = "0.1.0"
authors = ["Russell Mull <russell@auxon.io>", "Zack Pierce <zack@auxon.io"]
edition = "2018"

[features]
default = []
test_support = []

[dependencies]
selfe-sys = { git = "ssh://git@github.com/auxoncorp/selfe-sys.git" }
selfe-wrap = { path = "./selfe-wrap" }
typenum = "1.10"
generic-array = "0.13.2"
cross_queue = { path = "./cross_queue" }
smart_alloc = { path = "./smart_alloc" }
pdqsort = "1"

[dependencies.arrayvec]
version = "0.4.10"
default-features = false

[build-dependencies]
selfe-config = { git = "ssh://git@github.com/auxoncorp/selfe-sys.git" }
