[package]
name = "ferros"
version = "0.1.1"
authors = ["Russell Mull <russell@auxon.io>", "Zack Pierce <zack@auxon.io"]
edition = "2018"
resolver = "2"

[features]
default = []
test_support = []

[dependencies]
selfe-sys = "0.1"
typenum = "1.10"
generic-array = "0.13.2"
cross_queue = { path = "./cross_queue" }
smart_alloc = { path = "./smart_alloc" }
pdqsort = "1"
xmas-elf = "0.7"

[dependencies.arrayvec]
version = "0.4.10"
default-features = false

[build-dependencies]
selfe-config = "0.2"
