[package]
name = "cross_queue"
version = "0.1.0"
authors = ["Dan Pittman <dan@auxon.io>", "Zack Pierce <zack@auxon.io>"]
edition = "2018"

[dependencies]
typenum = { git = "ssh://github.com/auxoncorp/typenum.git" }
generic-array = { git = "ssh://github.com/auxoncorp/generic-array.git", branch = "auxon-typenum" }

[dev-dependencies]
rand = "0.6"
crossbeam-utils = "0.6.5"
