[package]
name = "example"
version = "0.1.0"
authors = ["Russell Mull <russell@auxon.io>"]
edition = "2018"

[dependencies]
selfe-sys = { git = "ssh://git@github.com/auxoncorp/selfe-sys.git", branch = "factor-out-runtime-lib"}
sel4-start = { git = "ssh://git@github.com/auxoncorp/selfe-sys.git", branch = "factor-out-runtime-lib", features = [ "panic_handler" ]  }
selfe-arc = { git = "ssh://git@github.com/auxoncorp/selfe-sys.git", branch = "factor-out-runtime-lib", default-features = false }
ferros = { path = ".." }
typenum = "1.10"

hello-printer = { path = "hello-printer" }

[build-dependencies]
cargo-5730 = "0.1"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"