[package]
name = "ferros-test"
version = "0.1.0"
authors = ["Zachary Pierce <zack@auxon.io>"]
edition = "2018"

[features]
default = ["sel4_start_main"]
sel4_start_main = ["sel4-start", "ferros", "selfe-sys"]

[dependencies]
test-macro-impl = { path = "./test-macro-impl" }

[dependencies.selfe-sys]
git = "ssh://git@github.com/auxoncorp/selfe-sys.git"
optional = true

[dependencies.sel4-start]
git = "ssh://git@github.com/auxoncorp/selfe-sys.git"
optional = true

[dependencies.ferros]
path = ".."
optional = true
