[package]
name = "ferros-test"
version = "0.1.0"
authors = ["Zachary Pierce <zack@auxon.io>"]
edition = "2018"
resolver = "2"

[features]
default = ["sel4_start_main"]
sel4_start_main = ["sel4-start/panic_handler", "ferros", "selfe-sys"]

[dependencies]
test-macro-impl = { path = "./test-macro-impl" }

[dependencies.selfe-sys]
git = "https://github.com/auxoncorp/selfe-sys"
optional = true

[dependencies.sel4-start]
git = "https://github.com/auxoncorp/selfe-sys"
optional = true

[dependencies.ferros]
path = ".."
optional = true
