[package]
name = "ferros-test"
version = "0.1.0"
authors = ["Zachary Pierce <zack@auxon.io>"]
edition = "2018"
resolver = "2"

[features]
default = ["sel4_start_main"]
sel4_start_main = ["selfe-start/panic_handler", "ferros", "selfe-sys"]

[dependencies]
test-macro-impl = { path = "./test-macro-impl" }

[dependencies.selfe-sys]
version = "0.1"
optional = true

[dependencies.selfe-start]
version = "0.1"
optional = true

[dependencies.ferros]
path = ".."
optional = true
