[package]
name = "smart_alloc"
version = "0.1.0"
authors = ["Zachary Pierce <zack@auxon.io>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "0.4.27"
quote = "0.6.11"
syn = { version = "0.15.34", features = ["full", "fold", "extra-traits"] }
uuid = { version = "0.7", features = ["v4"] }

