[package]
name = "hello-printer"
version = "0.1.0"
authors = ["Russell Mull <russell@auxon.io>"]
edition = "2018"

[dependencies]
selfe-sys = { git = "ssh://git@github.com/auxoncorp/selfe-sys.git" }
selfe-runtime = { git = "ssh://git@github.com/auxoncorp/selfe-sys.git", features = [ "panic_handler"  ]}
ferros = { path = "../.." }
