[package]
name = "fel4-test-project"
version = "0.1.0"
authors = ["Russell Mull <russell@auxon.io>"]
edition = "2015"

[dependencies]
# NOTE: We use a git dependency directly since the git submodules
# don't currently work when pulled down from crates.io
# libsel4-sys = "0.5"
libsel4-sys = {git = "https://github.com/maindotrs/libsel4-sys.git", branch = "master"}

[dependencies.wee_alloc]
version = "0.4"
features = ["static_array_backend"]
optional = true

[dependencies.proptest]
version = "0.8.6"
default-features = false
features = ["alloc", "nightly"]
optional = true

[features]
default = []
alloc = ["wee_alloc"]
test = ["alloc", "proptest"]
