[package]
name = "fel4-test-project"
version = "0.1.0"
authors = ["Russell Mull <russell@auxon.io>"]
edition = "2015"

[dependencies]
# NOTE: We use a git dependency directly since the git submodules
# don't currently work when pulled down from crates.io
# libsel4-sys = "0.5"
libsel4-sys = { git = "ssh://git@github.com/auxoncorp/libsel4-sys.git", branch = "master" }
iron-pegasus = { path = "../.." }
typenum = "1.10.0"