[package]
name = "fel4-test-project"
version = "0.1.0"
authors = ["Russell Mull <russell@auxon.io>"]
edition = "2018"

[dependencies]
# NOTE: We use a git dependency directly since the git submodules
# don't currently work when pulled down from crates.io
# libsel4-sys = "0.5"
libsel4-sys-gen = { git = "ssh://git@github.com/auxoncorp/confignoble" }
sel4-start = { git = "ssh://git@github.com/auxoncorp/confignoble" }
ferros = { path = "../.." }
cross_queue = { path = "../../cross_queue" }
typenum = { git = "ssh://github.com/auxoncorp/typenum.git" }
registers = { git = "ssh://github.com/auxoncorp/registers.git" }

# [patch."ssh://git@github.com/auxoncorp/confignoble"]
# libsel4-sys-gen = { path = "../../../confignoble/libsel4-sys-gen" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"