[package]
name = "test-project"
version = "0.1.0"
authors = ["Russell Mull <russell@auxon.io>"]
edition = "2018"

[dependencies]
# NOTE: We use a git dependency directly since the git submodules
# don't currently work when pulled down from crates.io
# libsel4-sys = "0.5"
selfe-sys = { git = "ssh://git@github.com/auxoncorp/selfe-sys.git" }
sel4-start = { git = "ssh://git@github.com/auxoncorp/selfe-sys.git" }
ferros = { path = "../.." }
cross_queue = { path = "../../cross_queue" }
typenum = { git = "ssh://github.com/auxoncorp/typenum.git" }
registers = { git = "ssh://github.com/auxoncorp/registers.git" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
