[package]
name = "test-project"
version = "0.2.0"
authors = ["Russell Mull <russell@auxon.io>", "Zack Pierce <zack@auxon.io>"]
edition = "2018"

[dependencies]
# NOTE: We use a git dependency directly since the git submodules
# don't currently work when pulled down from crates.io
# libsel4-sys = "0.5"
selfe-sys = { git = "ssh://git@github.com/auxoncorp/selfe-sys.git" }
sel4-start = { git = "ssh://git@github.com/auxoncorp/selfe-sys.git" }
ferros = { path = "../.." , features = ["test_support"]}
ferros-test = { path = "../../ferros-test"}
cross_queue = { path = "../../cross_queue" }
typenum = "1.10"
registers = { git = "ssh://github.com/auxoncorp/registers.git" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"