[package]
name = "root-task"
version = "0.1.0"
authors = ["Russell Mull <russell@auxon.io>"]
edition = "2018"
resolver = "2"

[dependencies]
selfe-sys = "0.1"
selfe-start = { version = "0.1", features = ["panic_handler"] }
selfe-arc = { version = "0.1", default-features = false, features = [] }
ferros = { path = "../../.." }
typenum = "1.10"
xmas-elf = "0.7"

hello-printer = { path = "../hello-printer" }

[build-dependencies]
ferros-build = { path = "../../../ferros-build" }
