[package]
name = "imx6-hal"
version = "0.1.0"
authors = ["Jon Lamb"]
edition = "2021"

[dependencies]
embedded-hal = "0.2"
nb = "0.1"
bitflags = "1.3"
static_assertions = "1.1"
array-init = "2.0"

[dependencies.log]
version = "0.4"
default-features = false

[dependencies.num]
version = "0.4"
default-features = false

[dependencies.void]
version = "1.0"
default-features = false

[dependencies.net-types]
path = "../libraries/net-types"

[dependencies.imx6-devices]
path = "../imx6-devices"
