[package]
name = "minimal-ferros-test"
version = "0.1.0"
authors = ["Zack Pierce <zack@auxon.io>"]
edition = "2018"

[dependencies]
selfe-sys = { git = "ssh://git@github.com/auxoncorp/selfe-sys.git" }
sel4-start = { git = "ssh://git@github.com/auxoncorp/selfe-sys.git" }
ferros = { path = "../../.." , features = ["test_support"] }
ferros-test = { path = "../.." }
typenum = { git = "ssh://github.com/auxoncorp/typenum.git" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"