[package]
name = "minimal-ferros-test"
version = "0.1.0"
authors = ["Zack Pierce <zack@auxon.io>"]
edition = "2018"

[dependencies]
ferros = { path = "../../.." , features = ["test_support"] }
ferros-test = { path = "../.." }
typenum = "1.10"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"