[package]
name = "elf-process"
version = "0.1.0"
authors = ["Russell Mull <russell@auxon.io>"]
edition = "2018"
resolver = "2"

[dependencies]
selfe-sys = "0.1"
selfe-runtime = { version = "0.1", features = ["panic_handler"] }
selfe-arc = { version = "0.1", default-features = false }
ferros = { path = "../../.." }
