[package]
name = "root-task"
version = "0.2.0"
authors = ["Russell Mull <russell@auxon.io>", "Zack Pierce <zack@auxon.io>"]
edition = "2018"

[dependencies]
selfe-sys = { git = "ssh://git@github.com/auxoncorp/selfe-sys.git", branch="factor-out-runtime-lib" }
sel4-start = { git = "ssh://git@github.com/auxoncorp/selfe-sys.git", branch="factor-out-runtime-lib" }
ferros = { path = "../../.." , features = ["test_support"]}
ferros-test = { path = "../../../ferros-test"}
cross_queue = { path = "../../../cross_queue" }
typenum = "1.10"
registers = { git = "ssh://github.com/auxoncorp/registers.git" }
