[package]
name = "root-task"
version = "0.2.0"
authors = ["Russell Mull <russell@auxon.io>", "Zack Pierce <zack@auxon.io>"]
edition = "2018"
resolver = "2"

[dependencies]
selfe-sys = { git = "https://github.com/auxoncorp/selfe-sys" }
selfe-arc = { git = "https://github.com/auxoncorp/selfe-sys", default-features = false }
sel4-start = { git = "https://github.com/auxoncorp/selfe-sys", features=["panic_handler"] }

ferros = { path = "../../.." , features = ["test_support"]}
ferros-test = { path = "../../../ferros-test"}
cross_queue = { path = "../../../cross_queue" }
typenum = "1.10"
bounded-registers = { git = "https://github.com/auxoncorp/bounded-registers" }

elf-process = { path = "../elf-process" }

[build-dependencies]
ferros-build = { path="../../../ferros-build" }
