[package]
name = "enet"
version = "0.1.0"
authors = ["Jon Lamb"]
edition = "2021"

[dependencies]
selfe-sys = "0.1"
selfe-runtime = { version = "0.1", features = ["panic_handler"] }
ferros = { path = "../../../.." }
log = "0.4"

[dependencies.imx6-hal]
path = "../../imx6-hal"

[dependencies.debug-logger]
path = "../../libraries/debug-logger"

[dependencies.net-types]
path = "../../libraries/net-types"
