[package]
name = "iomux"
version = "0.1.0"
authors = ["Jon Lamb"]
edition = "2021"

[dependencies]
selfe-sys = { git = "https://github.com/auxoncorp/selfe-sys" }
selfe-runtime = { git = "https://github.com/auxoncorp/selfe-sys", features = ["panic_handler"] }
ferros = { path = "../../../.." }
log = "0.4"

[dependencies.imx6-hal]
path = "../../imx6-hal"

[dependencies.debug-logger]
path = "../../libraries/debug-logger"
