[package]
name = "persistent-storage"
version = "0.1.0"
authors = ["Jon Lamb"]
edition = "2021"

[dependencies]
selfe-sys = "0.1"
selfe-runtime = { version = "0.1", features = ["panic_handler"] }
ferros = { path = "../../../.." }
log = "0.4"
static_assertions = "1.1"
heapless = "0.7"

[dependencies.imx6-hal]
path = "../../imx6-hal"

[dependencies.debug-logger]
path = "../../libraries/debug-logger"

[dependencies.iomux]
path = "../iomux"

[dependencies.tickv]
git = "https://github.com/tock/tock.git"
rev = "772a9e68735025205a3da52a3a0c9fdee8b6148d"

[dependencies.siphasher]
version = "0.3"
features = []
default-features = false
